--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "io": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/Jean-pierre14/try#readme",
   "devDependencies": {
     "body-parser": "^1.19.0",
+    "consola": "^2.15.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
