--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
 PORT = 7000
-DB = 'mongodb+srv://chiruza:14Avril1997@14@skynet.u9oqy.mongodb.net/skynet?retryWrites=true&w=majority'
+DB = 'mongodb+srv://bisimwa:14Avril1997%4014@skynet.u9oqy.mongodb.net/skynet?retryWrites=true&w=majority'
 Con = 'mongodb+srv://chiruza:<password>@skynet.u9oqy.mongodb.net/payment?retryWrites=true&w=majority'
