mongoose model with virtual() function

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 7000
 
-DB = "mongodb+srv://chiruza:14Avril1997%4014@skynet.u9oqy.mongodb.net/skynet?retryWrites=true&w=majority"
+DB = "mongodb+srv://chiruza:Bisimwa%4014 Grace@skynet.u9oqy.mongodb.net/?retryWrites=true&w=majority"
 
 MONGODB_URI = "mongodb://localhost:27017/"
